2008-01-20  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/behaviour-opacity.hg: wrapped a couple missing methods

2008-01-20  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/score.ccg:
	* clutter/src/score.hg:
	* clutter/src/Makefile_list_of_hg.am_fragment: add new Score class
	* clutter/src/clutter_docs_override.xml: override some documentation for the
	Score class since I overloaded append() with a NULL parameter for parent

2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* examples/test-actors.cc: update example to use new BehaviourScale
	constructor API

2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/clutter_docs.xml: re-generated documentation
	* clutter/src/stage.hg: wrapped missing functions
	* clutter/src/timeline.hg: wrapped missing functions
	* tools/m4/convert_cluttermm.m4: moved a conversion to the source file

2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/behaviour-scale.hg: wrapped new BehaviourScale API and fixed
	up some API changes (constructor, etc)
	* clutter/src/stage.hg: wrapped new Stage API
	* tools/m4/convert_cluttermm.m4: add conversions for Fog

2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/behaviour-scale.hg: update get_bounds() API that now takes a
	start and end instead of an angle

2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/clutter_signals.defs: reverted a couple signal definitions back
	to take const parameters.  These were hand-changed and overwritten by
	re-generating the .defs file.

2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/behaviour-ellipse.hg: API change, angle degree arguments were
	changed from ClutterAngle to ClutterFixed in the C API

2008-01-19  Jonathon Jongsma  <jjongsma@gnome.org>

	* clutter/src/clutter_enums.defs:
	* clutter/src/clutter_methods.defs:
	* clutter/src/clutter_signals.defs: re-generated defs
	* clutter/src/actor.hg: wrapped the new Unit-related API (e.g. get_xu()).