@@ -48,6 +48,8 @@ extern const int cluttermm_micro_version;
 #include <cluttermm/stage.h>
 #include <cluttermm/texture.h>
 #include <cluttermm/timeline.h>
+#include <cluttermm/score.h>
+#include <cluttermm/shader.h>
 #include <cluttermm/types.h>
 
 //#include <cluttermm/box.h>
