@@ -25,5 +25,6 @@ behaviour-path.hg \
 behaviour-ellipse.hg \
 behaviour-rotate.hg \
 behaviour-scale.hg \
-score.hg
+score.hg \
+shader.hg
 #layout.hg box.hg margin.hg
