@@ -1,5 +1,15 @@
 2008-01-20  Jonathon Jongsma  <jjongsma@gnome.org>
 
+	* clutter/src/shader.ccg:
+	* clutter/src/shader.hg:
+	* clutter/src/Makefile_list_of_hg.am_fragment: add new Shader class
+	* clutter/cluttermm.h: add score.h and shader.h to main include header
+	* clutter/src/clutter_signals.defs:
+	* tools/extra_defs_gen/generate_defs_clutter.cc: generate defs for new
+	Shader and Score classes
+
+2008-01-20  Jonathon Jongsma  <jjongsma@gnome.org>
+
 	* clutter/src/behaviour-opacity.hg: wrapped a couple missing methods
 
 2008-01-20  Jonathon Jongsma  <jjongsma@gnome.org>
